# LibGUI

./: Application.cpp  Application.h  CMakeLists.txt  CommonTypes.h  EventManager.cpp  EventManager.h  Frame.cpp  Frame.h  GUI.cpp  GUI.h  Widget.cpp  Widget.h  Window.cpp  Window.h  constants.h  main.cpp
